[package]
name = "exec"
version = "0.1.0"
edition = "2021"
authors = ["Jason Wilkes <notarealdeveloper@gmail.com>"]
description = "Executables"

[[bin]]
name = "after"
path = "src/after/main.rs"

[[bin]]
name = "before"
path = "src/before/main.rs"

[dependencies]
regex = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
